// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Task Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Components/Task Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <button
      onClick={[Function]}
    >
      <span
        aria-label="pinTask-1"
        className="icon-star"
        id="pinTask-1"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Task Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <button
      onClick={[Function]}
    >
      <span
        aria-label="pinTask-1"
        className="icon-star"
        id="pinTask-1"
      />
    </button>
  </div>
</div>
`;
